# naafi

./: .continuerc.json  .env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.md  docker-compose.override.yml  docker-compose.yml
backend/: .coveragerc  .dockerignore  Dockerfile  README.md  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
backend/docs/: index.md
backend/naafi/: pytest.ini  tenant_urls.py  urls.py  wsgi.py
backend/naafi/appointments/: apps.py  models.py  serializers.py  views.py
backend/naafi/categories/: apps.py  models.py  serializers.py  urls.py  views.py
backend/naafi/common/helpers/: logger.py
backend/naafi/config/: common.py
backend/naafi/customers/: apps.py  models.py  serializers.py  urls.py  views.py
backend/naafi/dashboard/: apps.py  serializers.py  urls.py  views.py
backend/naafi/expenses/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/naafi/invoices/: apps.py  models.py  serializers.py  urls.py  views.py
backend/naafi/services/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/naafi/settings/: apps.py  constants.py  models.py  serializers.py  urls.py  views.py
backend/naafi/taxes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/naafi/tenants/: admin.py  apps.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/naafi/users/: admin.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/naafi/utils/: common.py  urls.py  views.py
backend/naafi/vehicles/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: prestart.sh
(+266 files in other folders)
